page design changed in find patient and form alignment issues fixed

--- a/src/app/business/modules/customers/customer-create/customer-create.component.css
+++ b/src/app/business/modules/customers/customer-create/customer-create.component.css
@@ -5,7 +5,7 @@
     padding: 20px !important;
 } 
 .createCustomer .form-group {
-    margin-bottom: 1rem !important;
+    margin-bottom: 0.1rem !important;
 }
 .card-body {
     padding:1rem!important;
